--- a/app/src/main/res/layout/activity_records.xml
+++ b/app/src/main/res/layout/activity_records.xml
@@ -20,7 +20,7 @@
             android:layout_marginStart="5dp"
             android:layout_marginLeft="5dp"
             android:text="Number of Records: "
-            android:textSize="24sp"
+            android:textSize="16sp"
             android:textStyle="bold" />
 
         <TextView
@@ -37,13 +37,25 @@
             android:textSize="24sp"
             android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/refreshButton"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
-            android:text="Refresh" />
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/refreshButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:layout_marginRight="5dp"
+                android:text="Refresh" />
+
+            <Button
+                android:id="@+id/favouritesButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Favourite" />
+        </LinearLayout>
 
     </LinearLayout>
 
